Fix alignment

--- a/style.css
+++ b/style.css
@@ -84,6 +84,12 @@ h5 {
   color: #e4405f;
 }
 
+@media screen and (max-width: 767px) {
+  .social-links {
+    display: none !important;
+  }
+}
+
 #highlight-carousel {
   width: 100%;
   height: 100vh;
@@ -154,7 +160,7 @@ h5 {
   background-color: transparent;
   margin: 10px;
   border-radius: 10px;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
+  box-shadow: 0px 2px 10px rgba(40, 0, 0, 0.24);
   border: 2px solid rgba(7, 7, 7, 0.12);
   font-size: 20px;
   transition: all 0.3s ease;
@@ -276,6 +282,7 @@ h5 {
 .btn-default:active .filter-button:active {
   background-color: #42b32f;
   color: white;
+  outline: none;
 }
 
 .gallery_product {
@@ -294,9 +301,9 @@ h5 {
   max-width: 1024px;
   width: 100%;
   padding: 0;
-
   margin: 0 auto;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -365,7 +372,7 @@ h5 {
   margin-top: 20px;
   opacity: 0;
   max-height: 0;
-  transition: all 0.3s ease;
+  transition: all 0.8s ease;
 }
 .card:hover {
   height: 500px;
@@ -407,6 +414,12 @@ h5 {
 
 .float-right {
   float: right;
+}
+
+@media screen and (max-width: 767px) {
+  .float-right {
+    float: left;
+  }
 }
 
 /* Add a dark background color to the footer */
